--- a/Notebook/data_processing.ipynb
+++ b/Notebook/data_processing.ipynb
@@ -13,7 +13,8 @@
     "from itertools import chain\n",
     "from collections import Counter\n",
     "import pickle\n",
-    "import os"
+    "import os\n",
+    "import requests"
    ]
   },
   {
@@ -23,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curr_dir = Path(os.getcwd())\n",
+    "curr_dir = Path(os.getcwd()).parent\n",
     "df_train = pd.read_csv(f\"{curr_dir}/Data/train.csv\")"
    ]
   },
@@ -26109,8 +26110,16 @@
     "    k for k, v in token_count_dict.items() if v <= 5 or v >= 13_000\n",
     "}\n",
     "\n",
+    "url = \"https://raw.githubusercontent.com/hyperreality/American-British-English-Translator/master/data/british_spellings.json\"\n",
+    "british_to_american_dict = requests.get(url).json()\n",
+    "\n",
+    "def americanize(string):\n",
+    "    for british_spelling, american_spelling in british_to_american_dict.items():\n",
+    "        string = string.replace(british_spelling, american_spelling)\n",
+    "    return string\n",
+    "\n",
     "clean_list = [\n",
-    "    [tkn for tkn in doc if tkn not in exclude_word]\n",
+    "    americanize(' '.join([tkn for tkn in doc if tkn not in exclude_word])).split()\n",
     "    for doc in df_train[\"token\"]\n",
     "]"
    ]
@@ -26120,10 +26129,24 @@
    "execution_count": 7,
    "id": "e0557303",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qq/hh_0gxld6xn31rzgvptk0x540000gn/T/ipykernel_38106/1718599673.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  output_df[\"token\"] = clean_list\n"
+     ]
+    }
+   ],
    "source": [
-    "output_df = pd.DataFrame({'token': clean_list})\n",
-    "output_df['token_string'] = output_df['token'].apply(lambda tkn: \" \".join(tkn))"
+    "output_df = df_train[[\"label\"]]\n",
+    "output_df[\"token\"] = clean_list\n",
+    "output_df['text'] = output_df['token'].apply(lambda tkn: \" \".join(tkn))"
    ]
   },
   {
